# ChangeLog for dev-java/backport-util-concurrent
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/backport-util-concurrent/ChangeLog,v 1.22 2009/11/02 21:48:00 maekke Exp $

  02 Nov 2009; Markus Meier <maekke@gentoo.org>
  backport-util-concurrent-3.0-r1.ebuild:
  amd64/x86 stable, bug #291484

*backport-util-concurrent-3.0-r1 (03 Oct 2009)

  03 Oct 2009; Vlastimil Babka <caster@gentoo.org>
  -backport-util-concurrent-1.1.01-r1.ebuild,
  +backport-util-concurrent-3.0-r1.ebuild:
  Revbump to remove java5 useflag, and default to java5.

  10 Jan 2008; Vlastimil Babka <caster@gentoo.org>
  backport-util-concurrent-1.1.01-r1.ebuild:
  Restrict junit dependency.

  10 Jan 2008; Vlastimil Babka <caster@gentoo.org>
  backport-util-concurrent-1.1.01-r1.ebuild,
  backport-util-concurrent-3.0.ebuild:
  Restrict junit dependency.

  21 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  backport-util-concurrent-3.0.ebuild:
  stable x86, bug 188797

  19 Aug 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  backport-util-concurrent-3.0.ebuild:
  amd64 stable, bug #187681.

  14 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  backport-util-concurrent-3.0.ebuild:
  ppc stable, bug #188797

  02 Jun 2007; Petteri Räty <betelgeuse@gentoo.org> metadata.xml,
  backport-util-concurrent-3.0.ebuild:
  Shorten the DESCRIPTION by using longdescription in metadata.xml.

  02 Jun 2007; Petteri Räty <betelgeuse@gentoo.org>
  -backport-util-concurrent-1.1.01.ebuild,
  backport-util-concurrent-3.0.ebuild:
  Remove generation 1 ebuild and add app-arch/unzip to DEPEND for 3.0.

  02 Jun 2007; Petteri Räty <betelgeuse@gentoo.org>
  backport-util-concurrent-1.1.01-r1.ebuild:
  Marked stable on amd64 for bug #179948.

  02 Jun 2007; nixnut <nixnut@gentoo.org>
  backport-util-concurrent-1.1.01-r1.ebuild:
  Stable on ppc wrt bug 179948

  31 May 2007; Christian Faulhammer <opfer@gentoo.org>