@@ -2,7 +2,7 @@ AUX backport-util-concurrent-3.0-notest.patch 491 RMD160 1267f72b754cfe122c64f64
 AUX backport-util-concurrent-3.0-test.patch 380 RMD160 f7bc3be94e79fac268b7ca393203877fadbb1c71 SHA1 b4bcf2991804787fa547d52b1f506e3e3480195a SHA256 dbd133bc068689d8b7dff508a48716e48fbb381f4089c07848003577c53933f6
 DIST backport-util-concurrent-3.0-src.zip 949726 RMD160 65a47f01f2de0e4fea2680245323f45c1e7f564f SHA1 aa1ad60e9038c4356516eb66574ad2edeb0f9b02 SHA256 fb5d81c929717baab117ab727a4561302277334e34fd68bafa280004c51b0cc2
 DIST backport-util-concurrent-Java50-3.0-src.zip 958747 RMD160 2b7acfedbee157e26d972ea2dcd8ee9e8112fec2 SHA1 495b4e6eaf3253e13e39a2a9aac5aed422e4e186 SHA256 d10858454fc9921632003a69e5a87e5bf08d8cc47edbba747dc29d19968da1a0
-EBUILD backport-util-concurrent-3.0-r1.ebuild 1521 RMD160 bef2443d84ed50c543d9e692d0ebeb380fa285d3 SHA1 589347883ba6470d3c8e8c37eb84223e299be3b2 SHA256 0ec9a982393e67adaedb7c49f6adf3e28c1894b23aa8a1e64673bda7d7b7bff4
-EBUILD backport-util-concurrent-3.0.ebuild 1725 RMD160 697587f7c82463a7a9112162f05fc285774bdbc5 SHA1 33ba0565e207894e82d8221f026ae505c71acfa4 SHA256 ff0db010ab4ecfe3fcdb530bad4c18ebe03a04c0f7717e2ba165325fdfd21980
-MISC ChangeLog 3875 RMD160 8633a9f7e961f439ef162ec71a984492040358fa SHA1 e52a1e8e86783fc3546cfd629e8466b668277780 SHA256 f2a0f1a706683b4f448351d72070bcee56fb3d74c0c3f7b848e5d6c7dcf68b7e
+EBUILD backport-util-concurrent-3.0-r1.ebuild 1337 RMD160 5fc346e092f38c4234fa1c759ffbb91d0d8497c5 SHA1 17e96364d4ea2986151a73db34071c0c3225ebdd SHA256 1c310105b2b3f3ae8d657ffac813dfbf9562f736d7145fdaee49d252d7417b29
+EBUILD backport-util-concurrent-3.0.ebuild 1726 RMD160 ae6391d2a19e2e90f28bd3eba4d04333687c90b5 SHA1 d3eab7e84b24e450713eb5b0fa8abefe8c8e2c3c SHA256 cc05bf394b5a119b4e01e21969463388dfd4c3e8e8408cdd3d7c973f19b786d7
+MISC ChangeLog 4137 RMD160 add65c6428b71a35cdbbda1354d1a9708ee9641c SHA1 0b62cae0fbb8462ba4ad76d1b6d7c4164edc9366 SHA256 c2abed52c3432888ab2fcdd75dcfebff13a3513c5270590de22dbde11bcadf9f
 MISC metadata.xml 327 RMD160 6cb78e59be1161bb0838d270ad70b89f1701d067 SHA1 91f86e04405e680145c06ee44ea712f374e85c0f SHA256 5211f0eb4ff59809e2878506ad92010fc57863cf802f27da6d00fcaf718cd8bf
