@@ -1,6 +1,14 @@
 # ChangeLog for dev-java/backport-util-concurrent
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/backport-util-concurrent/ChangeLog,v 1.22 2009/11/02 21:48:00 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/backport-util-concurrent/ChangeLog,v 1.24 2009/11/17 15:16:51 caster Exp $
+
+  17 Nov 2009; Vlastimil Babka <caster@gentoo.org>
+  backport-util-concurrent-3.0-r1.ebuild:
+  Cleanup unpack.
+
+  17 Nov 2009; Vlastimil Babka <caster@gentoo.org>
+  backport-util-concurrent-3.0.ebuild:
+  Leave only ppc keyword, in order to remove Sun 1.4 java.
 
   02 Nov 2009; Markus Meier <maekke@gentoo.org>
   backport-util-concurrent-3.0-r1.ebuild:
